test/spec_vectors/conversions/fail/module_11.wat
(module (func (result i64) (i64.trunc_f64_s (i32.const 0))))